Fix overflow on product lister item

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -318,6 +318,7 @@ span.help-block {
   opacity: 0;
   transition: .5s ease;
   background-color: white;
+  overflow: hidden;
 }
 
 .lister-product-container:hover .lister-product-image-overlay {
